testsuite/positive/Issue-git-0203.n
namespace X
{
  public class A
  {
    protected class AInner {}
  }

  public class B : A { }

  public class C : B
  {
    class CInner : AInner {}
  
    public Test() : void { _ = CInner(); }
  }
}
namespace Y
{
  public class A
  {
    protected class AInner {}
  }

  public class B : A { }

  public class C : B
  {
    class CInner : AInner {}
  
    public Test() : void { _ = CInner(); }
  }
}

module Program
{
  Main() : void { }
}