testsuite/negative/Issue-git-0272.n
struct A {}

module Program
{
  Main() : void
  {
    def a1 = A();
    def a2 = A() : A?;

    _ = a1 < a2; // E: typing fails on finding the operator
  }
}